Implement all pthread functions used by Kvazaar

--- a/ThreadWrapper/ThreadWrapper.vcxproj
+++ b/ThreadWrapper/ThreadWrapper.vcxproj
@@ -132,6 +132,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="threads.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="threads.h" />
