--- a/ThreadWrapper/ThreadWrapper.vcxproj
+++ b/ThreadWrapper/ThreadWrapper.vcxproj
@@ -132,10 +132,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="threads.cpp" />
+    <ClCompile Include="pthread.cpp" />
+    <ClCompile Include="semaphore.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="threads.h" />
+    <ClInclude Include="pthread.h" />
+    <ClInclude Include="semaphore.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
